# atman

./: .pre-commit-config.yaml  .taplo.toml  Cargo.toml  README.md  build_bindings.sh  daemonize.sh  get.sh  sync.sh
.github/workflows/: binding.yml  rust.yml
atman/: Cargo.toml  build_bindings.sh
atman-cli/: Cargo.toml
atman-cli/src/: main.rs
atman-uniffi-bindgen/: Cargo.toml
atman-uniffi-bindgen/src/: main.rs
atman/src/: binding.rs  command.rs  config.rs  discovery.rs  error.rs  lib.rs  models.rs  periodic_sync.rs  sync_timer.rs  uniffi_api.rs
atman/src/actors/: mod.rs
atman/src/actors/network/: error.rs  mod.rs
atman/src/actors/network/protocols/: echo.rs  mod.rs  sync.rs
atman/src/actors/network/protocols/blobs/: mod.rs  ticket.rs
atman/src/actors/rest/: error.rs  mod.rs
atman/src/actors/sync/: config.rs  handle.rs  message.rs  mod.rs
atman/src/command/: blobs.rs  mod.rs  sync.rs
atman/src/doc/: mod.rs
atman/src/doc/aviation/: flights.rs  mod.rs
atman/src/doc/protocol/: mod.rs  node.rs  nodes.rs
src/: binding.rs  iroh.rs  lib.rs
src/actors/network/: error.rs  mod.rs
src/actors/network/protocols/: echo.rs  mod.rs  sync.rs
src/actors/sync/: message.rs  mod.rs
src/doc/: mod.rs
src/doc/aviation/: flight.rs  flights.rs  mod.rs
