[package]
name = "atman"
version = "0.1.0"
authors = ["Youngjoon Lee"]
edition = "2024"
description = "Atman is a set of protocols that can be embedded into any desktop and mobile applications."
license = "Apache-2.0"
homepage = "https://github.com/atman-project"
repository = "https://github.com/atman-project/atman"
readme = "README.md"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
actman = "0.1"
automerge = "0.6"
autosurgeon = { version = "0.8", features = ["uuid"] }
clap = { version = "4", features = ["derive"] }
iroh = { version = "0.90", features = ["discovery-local-network"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syncman = { git = "https://github.com/atman-project/syncman" }
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "sync",
    "time",
    "rt-multi-thread",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
test-log = "0.2"
