[package]
authors     = ["Youngjoon Lee"]
description = "Atman is a set of protocols that can be embedded into any desktop and mobile applications."
edition     = "2024"
homepage    = "https://github.com/atman-project"
license     = "Apache-2.0"
name        = "atman"
readme      = "README.md"
repository  = "https://github.com/atman-project/atman"
version     = "0.1.0"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
actman             = "0.1"
async-trait        = "0.1"
automerge          = "0.6"
autosurgeon        = { version = "0.8", features = ["uuid"] }
clap               = { version = "4", features = ["derive"] }
iroh               = { version = "0.90", features = ["discovery-local-network"] }
once_cell          = "1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
syncman            = { git = "https://github.com/atman-project/syncman" }
thiserror          = "2"
tokio              = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1", features = ["v4"] }

[dev-dependencies]
test-log = "0.2"
