[workspace]
members  = ["atman", "atman-cli"]
resolver = "3"

[workspace.package]
authors    = ["Youngjoon Lee"]
edition    = "2024"
homepage   = "https://github.com/atman-project"
license    = "Apache-2.0"
readme     = "README.md"
repository = "https://github.com/atman-project/atman"

[workspace.dependencies]
iroh               = "0.90"
serde              = "1"
serde_json         = "1"
thiserror          = "2"
tokio              = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"
