[package]
authors     = { workspace = true }
description = "Command-line interface for Atman"
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
name        = "atman-cli"
readme      = { workspace = true }
repository  = { workspace = true }
version     = "0.1.0"

[dependencies]
atman              = { path = "../atman", features = ["rest"] }
clap               = { version = "4", features = ["derive"] }
iroh               = { workspace = true }
qrcode             = "0.14"
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
