[package]
name        = "atman-cli"
version     = "0.1.0"
description = "Command-line interface for Atman"
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[[bin]]
name = "atman"
path = "src/main.rs"

[dependencies]
atman              = { path = "../atman", features = ["rest"] }
clap               = { version = "4", features = ["derive"] }
humantime          = "2"
iroh               = { workspace = true }
qrcode             = "0.14"
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url                = "2"
