[package]
name        = "atman-cli"
version     = "0.1.0"
description = "Command-line interface for Atman"
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[[bin]]
name = "atman"
path = "src/main.rs"

[dependencies]
atman              = { features = ["rest"], path = "../atman" }
clap               = { features = ["derive"], version = "4" }
humantime          = "2"
iroh               = { workspace = true }
qrcode             = "0.14"
serde_json         = { workspace = true }
tokio              = { features = ["rt-multi-thread"], workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }
url                = "2"
