[package]
name        = "atman"
version     = "0.1.0"
description = "Atman is a set of protocols that can be embedded into any desktop and mobile applications."
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
actman             = "0.1"
async-trait        = "0.1"
automerge          = "0.6"
autosurgeon        = { version = "0.8", features = ["uuid"] }
axum               = { version = "0.8", optional = true }
ed25519-dalek      = { version = "2", features = ["serde", "signature"] }
hex                = "0.4"
humantime-serde    = "1"
iroh               = { workspace = true, features = ["discovery-local-network"] }
once_cell          = "1"
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
syncman            = { git = "https://github.com/atman-project/syncman" }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread"] }
tower-http         = { version = "0.6", features = ["timeout"], optional = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
test-log = "0.2"

[features]
default = []
rest    = ["axum", "tower-http"]

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used with serde_with derivation
