[package]
name        = "atman"
version     = "0.1.0"
description = "Atman is a set of protocols that can be embedded into any desktop and mobile applications."
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
actman             = "0.1"
async-trait        = "0.1"
automerge          = "0.6"
autosurgeon        = { features = ["uuid"], version = "0.8" }
axum               = { optional = true, version = "0.8" }
data-encoding      = "2"
ed25519-dalek      = { features = ["serde", "signature"], version = "2" }
hex                = "0.4"
humantime-serde    = "1"
iroh               = { features = ["discovery-local-network"], workspace = true }
iroh-blobs         = "0.96"
irpc               = "0.10"
once_cell          = "1"
postcard           = { features = ["alloc"], version = "1" }
serde              = { features = ["derive"], workspace = true }
serde_json         = { workspace = true }
syncman            = { git = "https://github.com/atman-project/syncman" }
thiserror          = { workspace = true }
tokio              = { features = ["rt-multi-thread"], workspace = true }
tower-http         = { features = ["timeout"], optional = true, version = "0.6" }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
url                = "2"
uuid               = { features = ["v4"], version = "1" }

[dev-dependencies]
tempfile = "3"
test-log = "0.2"

[features]
default = []
rest    = ["axum", "tower-http"]

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used with serde_with derivation
