[package]
name        = "atman"
version     = "0.1.0"
description = "Atman is a set of protocols that can be embedded into any desktop and mobile applications."
authors     = { workspace = true }
edition     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }

[lib]
# staticlib: iOS .a. lib: in-workspace consumers (atman-cli, tests).
#
# We don't add `cdylib` (.dylib / .so) here. It will be requested
# per-build via `cargo rustc --crate-type cdylib` because emitting it
# unconditionally breaks linking for iOS targets in CI.
# See `build_bindings.sh` for more details.
crate-type = ["lib", "staticlib"]

[dependencies]
actman             = "0.1"
async-trait        = "0.1"
automerge          = { optional = true, version = "0.6" }
autosurgeon        = { features = ["uuid"], optional = true, version = "0.8" }
axum               = { optional = true, version = "0.8" }
data-encoding      = "2"
ed25519-dalek      = { features = ["serde", "signature"], version = "2" }
hex                = "0.4"
humantime-serde    = "1"
iroh               = { features = ["discovery-local-network"], workspace = true }
iroh-blobs         = { optional = true, version = "0.96" }
irpc               = { optional = true, version = "0.10" }
once_cell          = "1"
postcard           = { features = ["alloc"], version = "1" }
serde              = { features = ["derive"], workspace = true }
serde_json         = { workspace = true }
syncman            = { git = "https://github.com/atman-project/syncman", optional = true }
thiserror          = { workspace = true }
tokio              = { features = ["rt-multi-thread"], workspace = true }
tower-http         = { features = ["timeout"], optional = true, version = "0.6" }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uniffi             = { features = ["tokio"], workspace = true }
url                = "2"
uuid               = { features = ["v4"], version = "1" }

[dev-dependencies]
tempfile = "3"
test-log = "0.2"

[features]
default = []
blobs   = ["dep:iroh-blobs", "dep:irpc"]
rest    = ["axum", "tower-http"]
sync    = ["dep:automerge", "dep:autosurgeon", "dep:syncman"]

[package.metadata.cargo-machete]
ignored = ["humantime-serde"] # used with serde_with derivation
